tests/expectations/compiler/scalar/square_root_fail.out
Error [ETYC0372117]: Expected type `field` but type `scalar` was found.
    --> compiler-test:4:12
     |
   4 |     return a.square_root(); // square root not supported for scalar types.
     |            ^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
